--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ textarea {
   color: white;
   border: 1px solid white;
   width: 80%;
-  height: 100%;
+  height: 15em;
   font-family: monospace;
   font-size: 1.2em;
   border-radius: 5px;
@@ -26,13 +26,23 @@ textarea {
   padding: 0.1em;
 }
 textarea:focus {
-  box-shadow: 5px 5px 0 2px #fff;
+  box-shadow: 0 0 0.4em white;
+}
+button {
+  background-color: rgb(0, 57, 0);
+  transition: background 250ms ease-in-out;
+  cursor: pointer;
+  border: 0.1em solid rgb(171, 171, 171);
+  border-radius: 2px;
+  padding: 0.5em;
+}
+button:hover {
+  background-color: rgb(0, 77, 0);
 }
 output {
   font-family: monospace;
 }
 .collapsible {
-  cursor: pointer;
   margin-top: 1em;
   padding: 0.5em;
   width: 100%;
@@ -41,7 +51,12 @@ output {
   outline: none;
   font-size: 1.2em;
   font-weight: bold;
-  background-color: rgb(39, 39, 39);
+  background: rgb(22, 22, 22);
+  background: linear-gradient(
+    180deg,
+    rgba(22, 22, 22, 1) 0%,
+    rgba(36, 36, 36, 1) 100%
+  );
   color: white;
 }
 .active,
@@ -52,5 +67,5 @@ output {
   padding: 0 1em;
   display: none;
   overflow: hidden;
-  background-color: rgb(39, 39, 39);
+  background-color: rgb(36, 36, 36);
 }
