--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,12 @@ button {
 button:hover {
   background-color: rgb(0, 77, 0);
 }
+button:disabled,
+button[disabled] {
+  background-color: rgb(50, 50, 50);
+  color: rgb(171, 171, 171);
+  cursor: not-allowed;
+}
 output {
   font-family: monospace;
 }
